# qlora-fine-tune

./: .gitmodules  README.md  chat.py  finetune_guanaco_13b.sh  loss_curve.py  process_data.py  pyproject.toml  train.sh  train_13b.sh  train_30b.sh  utils.py
data/: process.py  token_lengths.py
scraper/: TinyML.csv  scraper.py
